tests/e2e/pass/v17_block_scope_for_shadow.ep
# EXIT: 0
fun main(): i64 {
    let i = 5
    for i: 0:3 {
        let inner = i
        if inner < 0 {
            ret 1
        }
    }
    ret i - 5
}
