tests/e2e/fail/v8_global_string_rejected.ep
# COMPILE_FAIL: global let greeting only supports scalar integer and bool types for now
let greeting = "hello"

fun main(): i64 {
    ret 0
}